test/serror.test
/*
Test terminates with a syntax error and a nice message
*/
main(){
	^_^;
}



